# deno_ipc

./: Cargo.toml  README.md  mod.ts  test.ts
.github/workflows/: release.yml
src/: lib.rs
